Renamed test source files

--- a/FTLTest/FTLTest.vcxproj.filters
+++ b/FTLTest/FTLTest.vcxproj.filters
@@ -32,16 +32,16 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="unittest1.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="unittest2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="HelperFunction.cpp">
       <Filter>Helper</Filter>
     </ClCompile>
     <ClCompile Include="pointer_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="enum_enumerator_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="property_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
