--- a/FTL/FTL.vcxproj
+++ b/FTL/FTL.vcxproj
@@ -67,11 +67,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="EnumEnumerator.h" />
-    <ClInclude Include="IsPointer.h" />
-    <ClInclude Include="PointerDataType.h" />
-    <ClInclude Include="Property.h" />
-    <ClInclude Include="VoidTemplate.h" />
+    <ClInclude Include="include\EnumEnumerator.h" />
+    <ClInclude Include="include\IsPointer.h" />
+    <ClInclude Include="include\PointerDataType.h" />
+    <ClInclude Include="include\Property.h" />
+    <ClInclude Include="include\VoidTemplate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
