Revert "Unneccessary file removed"
This reverts commit ea45a5fc26da340c64cb8c2003cd42c6ae9aa5bf.

--- a/FTL/FTL.vcxproj.filters
+++ b/FTL/FTL.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="include\PointerDataType.h">
       <Filter>TypeTrait</Filter>
     </ClInclude>
+    <ClInclude Include="include\VoidTemplate.h">
+      <Filter>TypeTrait</Filter>
+    </ClInclude>
     <ClInclude Include="include\IsPointer.h">
       <Filter>TypeTrait</Filter>
     </ClInclude>
