--- a/FTL/FTL.vcxproj
+++ b/FTL/FTL.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="include\PointerDataType.h" />
     <ClInclude Include="include\Property.h" />
     <ClInclude Include="include\MathVector.h" />
+    <ClInclude Include="include\VoidTemplate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
