Use latest cpp standarad

--- a/FTLTest/FTLTest.vcxproj
+++ b/FTLTest/FTLTest.vcxproj
@@ -58,6 +58,7 @@
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;../FTL/include;include;pch;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -75,6 +76,7 @@
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;../FTL/include;include;pch;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
